@@ -4,11 +4,33 @@
  * @ingroup Language
  * @file
  *
+ * @author Philip
  */
 
 # Stub message file for converter code "zh"
 
 $fallback = 'zh-hans';
+
+$namespaceNames = array(
+	NS_MEDIA            => 'Media',
+	NS_SPECIAL          => 'Special',
+	NS_MAIN             => '',
+	NS_TALK             => 'Talk',
+	NS_USER             => 'User',
+	NS_USER_TALK        => 'User_talk',
+	# NS_PROJECT set by $wgMetaNamespace
+	NS_PROJECT_TALK     => '$1_talk',
+	NS_FILE             => 'File',
+	NS_FILE_TALK        => 'File_talk',
+	NS_MEDIAWIKI        => 'MediaWiki',
+	NS_MEDIAWIKI_TALK   => 'MediaWiki_talk',
+	NS_TEMPLATE         => 'Template',
+	NS_TEMPLATE_TALK    => 'Template_talk',
+	NS_HELP             => 'Help',
+	NS_HELP_TALK        => 'Help_talk',
+	NS_CATEGORY         => 'Category',
+	NS_CATEGORY_TALK    => 'Category_talk'
+);
 
 $namespaceAliases = array(
 	'媒体'	=> NS_MEDIA,
@@ -34,22 +56,39 @@ $namespaceAliases = array(
 	'文件' => NS_FILE,
 	'图像对话' => NS_FILE_TALK,
 	'圖像對話' => NS_FILE_TALK,
+	'图像讨论' => NS_FILE_TALK,
+	'圖像討論' => NS_FILE_TALK,
 	'档案对话' => NS_FILE_TALK,
 	'檔案對話' => NS_FILE_TALK,
-	'文件对話' => NS_FILE_TALK,
+	'档案讨论' => NS_FILE_TALK,
+	'檔案討論' => NS_FILE_TALK,
+	'文件对话' => NS_FILE_TALK,
 	'文件對話' => NS_FILE_TALK,
+	'文件讨论' => NS_FILE_TALK,
+	'文件討論' => NS_FILE_TALK,
 	'模板'	=> NS_TEMPLATE,
-	'模板讨论'=> NS_TEMPLATE_TALK,
-	"樣板" => NS_TEMPLATE,
-	"樣板討論" => NS_TEMPLATE_TALK,
+	'样板'  => NS_TEMPLATE,
+	'樣板'  => NS_TEMPLATE,
+	'模板对话' => NS_TEMPLATE_TALK,
+	'模板對話' => NS_TEMPLATE_TALK,
+	'模板讨论' => NS_TEMPLATE_TALK,
+	'模板討論' => NS_TEMPLATE_TALK,
+	'样板对话' => NS_TEMPLATE_TALK,
+	'樣板對話' => NS_TEMPLATE_TALK,
+	'样板讨论' => NS_TEMPLATE_TALK,
+	'樣板討論' => NS_TEMPLATE_TALK,
 	'帮助'	=> NS_HELP,
-	'帮助讨论'=> NS_HELP_TALK,
-	"幫助" => NS_HELP,
-	"幫助討論" => NS_HELP_TALK,
+	'幫助'  => NS_HELP,
+	'帮助对话' => NS_HELP_TALK,
+	'幫助對話' => NS_HELP_TALK,
+	'帮助讨论' => NS_HELP_TALK,
+	'幫助討論' => NS_HELP_TALK,
 	'分类'	=> NS_CATEGORY,
+	'分類'  => NS_CATEGORY,
+	'分类对话'=> NS_CATEGORY_TALK,
+	'分類對話' => NS_CATEGORY_TALK,
 	'分类讨论'=> NS_CATEGORY_TALK,
-	"分類" => NS_CATEGORY,
-	"分類討論" => NS_CATEGORY_TALK,
+	'分類討論' => NS_CATEGORY_TALK,
 );
 
 $messages = array(
